--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,21 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "jms/serializer-bundle": "^3.7",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/swiftmailer-bundle": "^3.4",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "symfony/debug-pack": "^1.0",
+        "symfony/maker-bundle": "^1.19",
+        "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
         "preferred-install": {
