--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.4.*",
+        "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/yaml": "4.4.*"
     },
